FE: Fixes cart items spacing

--- a/public/juan/custom.css
+++ b/public/juan/custom.css
@@ -260,7 +260,6 @@ div#cart-details {
       flex-direction: row;
       margin-left: -10px;
       border-bottom: .5px solid #efefef;
-      background: #fff;
       margin-top: 20px;
   }
   .accordion-item img{
